src/objects/Application_End_Point_URL__c.object
<CustomObject>
    <description>Application End-Point URL</description>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <label>End-Point URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flipkart_Application_ID__c</fullName>
        <label>Flipkart Application ID</label>
        <referenceTo>Flipkart_Applications_Definition__c</referenceTo>
        <relationshipLabel>Application End-Point URL</relationshipLabel>
        <relationshipName>Application_End_Point_URL</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Application End-Point URL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Flipkart_Application_ID__c</columns>
        <columns>Service_Name__c</columns>
        <columns>End_Point_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application End-Point URL</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>